# Pipeline-de-Dados-Multimodais

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/raw/: sample_texts.txt
notebooks/: exploration.ipynb
scripts/: smoke_demo.sh
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.mjs
site/src/pages/: index.astro
src/pipeline/: __init__.py  config.py  flow.py  image_processing.py  io.py  text_processing.py
